# dns-manager-bind

./: .gitignore  CMakeLists.txt  README.md  ResourceRecord.h  Zone.h  dns-manager-admin.pro  main.cpp  mainwindow.cpp  mainwindow.h  namedconfparser.cpp  namedconfparser.h
.github/workflows/: cmake-single-platform.yml  package.yml  release.yml  tests.yml
src/: main.cpp
src/dns/: BindManager.cpp  BindManager.h  ConfigValidator.cpp  ConfigValidator.h  EventLogger.cpp  EventLogger.h
src/model/: EventLogEntry.h  ResourceRecord.h  ServerConfig.h  Zone.h
src/parser/: ConfigWriter.cpp  ConfigWriter.h  NamedConfParser.cpp  NamedConfParser.h  ZoneFileParser.cpp  ZoneFileParser.h
src/ui/: HelpDialog.cpp  HelpDialog.h  MainWindow.cpp  MainWindow.h  RecordDialog.cpp  RecordDialog.h  SettingsDialog.cpp  SettingsDialog.h  ZoneDialog.cpp  ZoneDialog.h  ZoneWizard.cpp  ZoneWizard.h
tests/: CMakeLists.txt  main.cpp  main_ui.cpp
tests/dns/: test_bind_manager.cpp  test_config_validator.cpp  test_config_writer.cpp  test_event_logger.cpp
tests/fixtures/: db.1.168.192.in-addr.arpa  db.example.com  db.legacy.ns  named_broken.conf  named_include.conf  named_include_zones.conf  named_simple.conf  named_slave.conf
tests/parser/: test_named_conf_parser.cpp  test_zone_file_parser.cpp
tests/ui/: test_recorddialog.cpp  test_zonedialog.cpp  test_zonewizard.cpp
